# gavel

./: CLAUDE.md  Dockerfile  Makefile  PRD.md  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json
ai_service/: Dockerfile  main.py  nlp_model.py  pyproject.toml  requirements.txt
cmd/engine/: main.go
internal/fetcher/: rss_parser.go  sources.go  stream.go  worker_pool.go
internal/processor/: ai_client.go  batcher.go  db_writer.go
internal/queue/: consumer.go  producer.go
migrations/: 001_init.sql
pkg/models/: models.go
proto/: analysis.proto
