[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "openai>=2.29.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
]
